Fix FileNotFoundException